--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p>Enter the password to open your letters</p>
     <input id="pw" type="password" placeholder="Password" autocomplete="off" />
     <button id="unlock">Unlock</button>
-    <p class="credit">Made with ❤️ — Aswin</p>
+    <p class="credit">Made with ❤️ — Rutu's Achu</p>
   </div>
 </div>
 
